fix absolute position firefox bug causing horizontal scroll

--- a/app/javascript/src/structure/_elements.scss
+++ b/app/javascript/src/structure/_elements.scss
@@ -5,6 +5,7 @@ body {
   font-size: $body;
   font-weight: $light-weight;
   line-height: lineHeight(body);
+  overflow: hidden;
 }
 
 a {
